tests/paczka2/big_fuzzy/38151523.err
Error in line 1: z24ZBrg A43 6,6
Error in line 2: 44FpNj A438 80,5
Error in line 3: A438 A438 88,1
Error in line 14: A438 S624 33,8
Error in line 4: 44FpNj S624 19,8
Error in line 26: QMKe9L A438 00,2
Error in line 25: 44FpNj A390 53,2
Error in line 32: z24ZBrg A390 14,6
Error in line 33: z24ZBrg A438 51,2
Error in line 38: QMKe9L A438 0,1
Error in line 43: TDG A390 54,7
Error in line 45: QMKe9L S624 52,7
Error in line 61: A438 A3N0 30,8
Error in line 59: A438 S670 74,2
Error in line 63: A438 A390 108,4
Error in line 69: A438 A390 77,0
Error in line 58: TDG S624 154,9
Error in line 93: 44FpNj A43: 395,3
Error in line 90: 82GuFAwj S624 97,4
Error in line 97: A438 A438 32,3
Error in line 112: z24ZBrg A438 1,4
Error in line 113: z24ZBrg S624 50,6
Error in line 118: 44FpNj A438 8,7
Error in line 106: 82GuFAwj S670 86,4
Error in line 134: 44FpNj A390 91,8
Error in line 92: TDG S624 116,9
Error in line 140: QMKe9L S670 43,8
Error in line 150: 82GuFAwj A438 49,2
Error in line 139: TDG A390 36,5
Error in line 160: z24ZBrg S670 76,5
Error in line 169: A438 A390 -3,2
Error in line 165: z24ZBrg A438 30,9
Error in line 171: z24ZBrg S624 94,2
Error in line 174: hIC A438 84,5
Error in line 184: 44FpNj S624 68,0
Error in line 194: 44FpNj S624 19,6
Error in line 197: A438 S624 58,5
Error in line 217: TDG S624 19,9
Error in line 218: TDG A390 13,1
Error in line 221: TDG A438 18,8
Error in line 212: A438 A390 45,4
Error in line 193: 82GuFAwj S670 110,5
Error in line 231: z24ZBrg A390 68,4
Error in line 232: z24ZBrg S624 57,7
Error in line 234: A438 A438 46,4
